# zipilot

./: .gitignore  README.md  config.yaml  pyproject.toml
specs/: example.yaml  sample-rename-column.yaml
tests/: test_fsm.py  test_persistence.py  test_spec.py  test_spec_command.py  test_tools.py  test_worktree.py
zipilot/: __init__.py  __main__.py  cli.py  config.py  console.py  context.py  fsm.py  persistence.py  session.py  spec.py  states.py  worktree.py
zipilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
zipilot/tools/: __init__.py  docker_tool.py  grep_codebase.py  playwright_qa.py  registry.py  run_command.py  wait_for_ci.py
