[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zipilot"
version = "0.1.0"
description = "Autonomous control plane for OpenAI Codex CLI sessions"
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0", "rich>=13.0"]

[project.scripts]
zipilot = "zipilot.cli:main"

[tool.setuptools.packages.find]
include = ["zipilot*"]
exclude = ["tests*", "specs*", "sessions*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
